Added bootstrap and customized

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1>Welcome to my app!</h1>
-<p>Sign up <%= link_to "here", "#" %>.</p>
+<div class="jumbotron">
+	<h1>Veterans Helping Hands</h1>
+	<p>Click here to <%= link_to "Do your part!", "#", class: "btn btn-success btn-lg"  %>
+
+		<%= render 'layouts/carousel' %>
+	</p>
+	<div class="text-center">
+		Three Ways to Give
+	</div>
+</div>
