--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,3 @@
 <h1>About us</h1>
-<p>We are working on our One Month Rails Pinteresting app</p>
+<p>We are working on our charity app benefiting those displaced in Iraq</p>
 <%= render 'layouts/modal' %>
