--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -23,7 +23,7 @@
     <div class="item">
       <img src="..." alt="..." height="300" width="500">
       <div class="carousel-caption">
-        Buy a bracelet
+        Donate a blanket
       </div>
     </div>
   </div>
